--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,9 @@ body {
 }
 
 .page {
+  display: flex;
+  align-items: center;
   margin: auto;
-  padding-top: 133px;
   color: var(--main-color-text);
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
@@ -65,11 +66,8 @@ ol {
 .content {
   display: flex;
   align-items: end;
+  justify-content: center;
   gap: 29px;
-}
-
-.result {
-  padding-left: 30px;
 }
 
 .title, .content__video-card-title {
@@ -77,7 +75,11 @@ ol {
 }
 
 .content__video-card-title {
+  width: 192px;
   font-size: 30px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .title {
@@ -99,7 +101,7 @@ ol {
 
 .result__video-container {
   position: relative;
-  min-width: 711px;
+  inline-size: 711px;
   height: 395px;
   margin-bottom: 14px;
 }
@@ -111,25 +113,37 @@ ol {
 }
 
 .content__list {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 33px;
-  height: 300px;
+  height: 310px;
+  min-width: 400px;
   overflow-y: auto;
-}
-
-.content__list {
-  position: relative;
+  overflow-x: hidden;
 }
 
 .content__list::-webkit-scrollbar {
-  width: 0;
+  width: 2px;
+  background-color: transparent;
+}
+
+.content__list::-webkit-scrollbar-track {
+  border: 1px solid transparent;
+  background-color: #545050;
+}
+
+.content__list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: #fff;
+  border: 1px solid #fff;
 }
 
 .content__details {
   display: flex;
   flex-direction: column;
-  gap: 24px;
+  gap: 9px;
   width: 100%;
   max-width: 400px;
 }
@@ -165,6 +179,7 @@ ol {
 }
 
 .content__card-link:hover:active {
+  text-decoration-color: transparent;
   background-color: var(--current-card-bg);
   transition: background-color .3s ease-in-out;
 }
@@ -190,18 +205,23 @@ ol {
   position: relative;
   display: flex;
   align-items: end;
-  gap: 40px;
+  gap: 39px;
+}
+
+.search-form__fieldset:nth-child(2) {
+  margin-bottom: 5px;
 }
 
 .button {
+  font-family: 'Fira Sans Condensed', sans-serif;
   width: 100%;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  outline: double 4px transparent;
   border: 1px solid #fff;
-  outline: double transparent;
   color: var(--main-color-text);
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: underline;
   text-decoration-color: transparent;
   background-color: transparent;
@@ -210,6 +230,7 @@ ol {
 }
 
 .button:active {
+  text-decoration: none;
   background-color: var(--button-active-bg);
 }
 
@@ -219,7 +240,11 @@ ol {
 
 .button:focus-visible {
   border-color: transparent;
-  outline: double #fff;
+  outline-color:#fff;
+  outline-offset: -2px;
+}
+
+.more-button:focus-visible {
   outline-offset: -4px;
 }
 
@@ -227,28 +252,27 @@ ol {
   border: none;
 }
 
-.more-button {
-  max-width: 399px;
-}
-
 .search-form__textfield {
-  margin-right: 1px;
+  min-height: 27px;
+  font-family: 'Fira Sans Condensed', sans-serif;
   margin-bottom: 0px;
   border: none;
   border-top: 1px solid var(--border-color-input);
   border-bottom: 1px solid var(--border-color-input);
   padding-top: 0;
   padding-left: 0;
+  padding-bottom: 0;
   color: var(--main-color-text);
   font-size: 18px;
   background-color: transparent;
   transition: border-color .3s ease-in-out;
   appearance: none;
+  min-width: 225px;
 }
 
 .search-form__textfield::placeholder {
   font-weight: 400;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .search-form__textfield:active {
@@ -261,10 +285,10 @@ ol {
 }
 
 .search-form__fieldset-title {
-  margin-bottom: 2px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
+  margin-bottom: 5px;
 }
 
 .search-form__submit-button {
@@ -283,7 +307,6 @@ ol {
 }
 
 .search-form__label-text {
-  margin-bottom: 2px;
   padding-left: 4px;
   text-decoration: underline;
   text-decoration-color: transparent;
@@ -300,10 +323,9 @@ ol {
 .search-form__label {
   display: flex;
   width: fit-content;
-  border: 1px solid transparent;
-  padding-top: 1px;
-  padding-bottom: 1px;
+  outline: 1px solid transparent;
   transition: border .3s ease-in-out;
+  outline-offset: 2px;
 }
 
 .search-form__label-text:hover {
@@ -313,31 +335,28 @@ ol {
 .search-form__checkbox[type='checkbox']:checked+.search-form__pseudo-checkbox::after {
   content: '';
   position: relative;
-  top: 1px;
-  left: 1px;
+  width: 100%;
+  height: 100%;
   display: block;
-  width: 15px;
-  height: 15px;
   background-color: #fff;
+  border: 1px solid #1b1919;
 }
 
 .search-form__checkbox[type='checkbox']:active+.search-form__pseudo-checkbox::after {
   content: '';
   position: relative;
-  top: 1px;
-  left: 1px;
+  width: 100%;
+  height: 100%;
   display: block;
-  width: 15px;
-  height: 15px;
   background-color: #fff;
+  border: 1px solid #1b1919;
 }
 
 .search-form__label:has(:focus-visible) {
-  border: 1px solid var(--border-color-input);
+  outline-color: 1px solid var(--border-color-input);
 }
 
 .search-form__checkbox-list {
   display: flex;
-  gap: 14px;
-  padding-top: 2px;
+  gap: 17px;
 }
