--- a/styles/style.css
+++ b/styles/style.css
@@ -23,6 +23,7 @@ body {
 
 .page {
   display: flex;
+  justify-content: center;
   align-items: center;
   margin: auto;
   color: var(--main-color-text);
@@ -65,8 +66,8 @@ ol {
 
 .content {
   display: flex;
-  align-items: end;
   justify-content: center;
+  align-items: end;
   gap: 29px;
 }
 
@@ -76,10 +77,10 @@ ol {
 
 .content__video-card-title {
   width: 192px;
+  overflow: hidden;
   font-size: 30px;
   text-overflow: ellipsis;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 .title {
@@ -101,9 +102,9 @@ ol {
 
 .result__video-container {
   position: relative;
-  inline-size: 711px;
   height: 395px;
   margin-bottom: 14px;
+  inline-size: 711px;
 }
 
 .result__video {
@@ -116,11 +117,12 @@ ol {
   position: relative;
   display: flex;
   flex-direction: column;
-  gap: 33px;
-  height: 310px;
+  gap: 30px;
   min-width: 400px;
-  overflow-y: auto;
+  height: 310px;
+  padding-top: 12px;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .content__list::-webkit-scrollbar {
@@ -134,10 +136,10 @@ ol {
 }
 
 .content__list::-webkit-scrollbar-thumb {
+  border: 1px solid #fff;
   border-radius: 10px;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
   background-color: #fff;
-  border: 1px solid #fff;
 }
 
 .content__details {
@@ -150,7 +152,7 @@ ol {
 
 .content__video-card {
   display: flex;
-  gap: 10px;
+  gap: 4px;
 }
 
 .content__video-card-description-container {
@@ -213,13 +215,13 @@ ol {
 }
 
 .button {
-  font-family: 'Fira Sans Condensed', sans-serif;
   width: 100%;
+  border: 1px solid #fff;
   padding-top: 5px;
   padding-bottom: 5px;
   outline: double 4px transparent;
-  border: 1px solid #fff;
   color: var(--main-color-text);
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-weight: 700;
   font-size: 18px;
   text-decoration: underline;
@@ -253,21 +255,21 @@ ol {
 }
 
 .search-form__textfield {
+  min-width: 225px;
   min-height: 27px;
-  font-family: 'Fira Sans Condensed', sans-serif;
   margin-bottom: 0px;
   border: none;
   border-top: 1px solid var(--border-color-input);
   border-bottom: 1px solid var(--border-color-input);
   padding-top: 0;
-  padding-left: 0;
   padding-bottom: 0;
+  padding-left: 0;
   color: var(--main-color-text);
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: transparent;
   transition: border-color .3s ease-in-out;
   appearance: none;
-  min-width: 225px;
 }
 
 .search-form__textfield::placeholder {
@@ -285,10 +287,10 @@ ol {
 }
 
 .search-form__fieldset-title {
+  margin-bottom: 5px;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  margin-bottom: 5px;
 }
 
 .search-form__submit-button {
@@ -324,8 +326,8 @@ ol {
   display: flex;
   width: fit-content;
   outline: 1px solid transparent;
-  transition: border .3s ease-in-out;
   outline-offset: 2px;
+  transition: border .3s ease-in-out;
 }
 
 .search-form__label-text:hover {
@@ -335,21 +337,21 @@ ol {
 .search-form__checkbox[type='checkbox']:checked+.search-form__pseudo-checkbox::after {
   content: '';
   position: relative;
+  display: block;
   width: 100%;
   height: 100%;
-  display: block;
-  background-color: #fff;
   border: 1px solid #1b1919;
+  background-color: #fff;
 }
 
 .search-form__checkbox[type='checkbox']:active+.search-form__pseudo-checkbox::after {
   content: '';
   position: relative;
+  display: block;
   width: 100%;
   height: 100%;
-  display: block;
-  background-color: #fff;
   border: 1px solid #1b1919;
+  background-color: #fff;
 }
 
 .search-form__label:has(:focus-visible) {
